# solving_ludo2

./: .gitignore  LICENSE  README.md  envoy.yaml  instructions_react.txt
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  engine.cc  engine.hpp  example_server.cpp  initializer.cc  managers.cc  mcts.cc  mcts.hpp  mcts_actor.cc  network.cc  network.hpp  network_utils.cc  network_utils.hpp  proto_utils.cc  proto_utils.hpp  random_actor.cc  random_game.cc  threading_utils.hpp
src/frontend/: generator.sh  package-lock.json  package.json
src/frontend/src/: App.js  default.css  main.css
src/frontend/src/components/: Base.js  Navbar.js  PContainer.js  Pawn.js  Pos.js
src/frontend/src/components/liveplay/: ColourChooser.js  LiveBoard.js
src/frontend/src/components/visualizer/: VisualizerBoard.js  VisualizerFiles.js
src/frontend/src/services/: gamesManagerService.js  liveplayManagerService.js
src/proto/: CMakeLists.txt  ludo.proto  service.proto  system.proto
